# 2605_Team03

./: .gitignore  Presentation_Script.md  README.md  settings.gradle.kts
.artifacts/20260517-212834-2644cc2b-9720-40f8-9174-02250100cd61/: walkthrough.artifact.md
.github/: discord-notify.json
.github/workflows/UI and stats/Cpp/: native-lib.cpp
.github/workflows/UI and stats/header/: NudgiePet.h
Documents/: GIT_Forking  discord-notifications.md
Documents/kotlin-cheat-sheet/: README.md
app/: build.gradle.kts
app/src/androidTest/java/com/example/nudgie/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml  new.sh
app/src/main/cpp/: NudgiePet.cpp  NudgiePet.h  native-lib.cpp
app/src/main/cpp/Cpp/: CMakeLists.txt  NudgiePet.cpp
app/src/main/cpp/header/: NudgiePet.h
app/src/main/java/com/example/nudgie/: MainActivity.kt
app/src/main/java/com/nightowlcrew/nudgie/: MainActivity.kt  NudgieApplication.kt
app/src/main/java/com/nightowlcrew/nudgie/data/: ActivityItem.kt  HabitDao.kt  HabitDefaults.kt  HabitEntity.kt  HabitLogEntity.kt  HabitMapper.kt  HabitRepository.kt  HabitRepositoryImpl.kt  HabitWithLogs.kt  NudgieDatabase.kt  PreferencesManager.kt  ScreenTimeDao.kt  ScreenTimeRecord.kt
app/src/main/java/com/nightowlcrew/nudgie/receivers/: MorningUnlockReceiver.kt
app/src/main/res/values/: font_certs.xml  strings.xml  themes.xml
app/src/test/java/com/example/nudgie/: ExampleUnitTest.kt
data/: ActivityItem.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+19 files in other folders)
